# agentjobs

./: .gitignore  AGENTS.md  ALLAGENTS.md  ENGINEERING.md  LICENSE  README.md  pyproject.toml
.agentjobs/: config.yaml
docs/: agent-workflow.md  api-reference.md  installation.md  migration-guide.md  quickstart.md  task-schema.md  webhooks.md
docs/integration/: agentjobs-package.md
examples/: README.md  basic_workflow.py  bulk_import.py  bulk_tasks.csv  codex_listener.py  collaborative_agent.py  continuous_agent.py  create_tasks.py  custom_filters.py  reporting.py  sample-task.yaml
prompts/: README.md  task-031-naming-research.md  task-031-phase-1-core-infrastructure.md  task-031-phase-2-rest-api.md  task-031-phase-3-web-gui.md  task-031-phase-4-migration-tool.md  task-031-phase-4.1-improve-task-rendering.md  task-031-phase-4.2-human-agent-ux.md  task-031-phase-5.1-package-and-integrate.md  task-031-phase-5.2-agent-dx-improvements.md  task-031-phase-5.3-bootstrap-self-management.md  task-041-phase-6-human-workflow-ux.md
src/agentjobs/: __init__.py  cli.py  client.py  manager.py  models.py  storage.py  webhooks.py
tasks/: task-002.yaml  task-006.yaml  task-007.yaml  task-016.yaml  task-017-parallelize-polygon-fetching.yaml  task-031-tasks-2-0-system.yaml  task-032-agentjobs-v0-2-production-hardening.yaml  test-001-draft-example.yaml
tasks/agentjobs/: task-001.yaml  task-002.yaml  task-003.yaml  task-004.yaml  task-005.yaml  task-006.yaml  task-007.yaml  task-031-tasks-2-0-system.yaml  task-032-agentjobs-v0-2-production-hardening.yaml  task-034-phase-2-rest-api.yaml  (+12 more)
tests/: test_api.py  test_cli.py  test_client.py  test_human_actions.py  test_manager.py  test_migration.py  test_models.py  test_storage.py  test_webhooks.py
(+31 files in other folders)
