[tool.poetry]
name = "agentjobs"
version = "0.1.0"
description = "Lightweight task management system for AI agent workflows"
authors = ["Jeff Posey <jposey@hellfiregames.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jeffposey/agentjobs"
repository = "https://github.com/jeffposey/agentjobs"
keywords = ["ai", "agents", "task-management", "workflow", "automation"]
packages = [{ include = "agentjobs", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pyyaml = "^6.0"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
jinja2 = "^3.1"
typer = "^0.9"
watchdog = "^3.0"
httpx = "^0.26"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.8"

[tool.poetry.scripts]
agentjobs = "agentjobs.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/agentjobs --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
